# apple-reminders-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: apple-reminders-mcp.rb
docs/plans/completed/completed/: 2026-03-08-apple-reminders-mcp-server.md
src/apple_reminders_mcp/: eventkit_service.py  server.py
tests/: test_eventkit_service.py  test_smoke.py  test_tools_read.py  test_tools_write.py
