[project]
name = "apple-reminders-mcp"
dynamic = ["version"]
description = "MCP server for Apple Reminders via EventKit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12",
    "pyobjc-framework-EventKit>=11.0; sys_platform == 'darwin'",
]

[project.scripts]
apple-reminders-mcp = "apple_reminders_mcp.server:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_reminders_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
